--- a/format_string_ctfs/3/Makefile
+++ b/format_string_ctfs/3/Makefile
@@ -8,16 +8,16 @@ COMPILE_FLAGS = -g -O0 -fno-stack-protector -no-pie # -m32
 	# -no-pie: disable position independent execution - disables relative paths for addresses
 	# -m32: compile as a 32 bit program
 
-all: 1_on_the_globe
-apple: on_the_globe_apple
+all: 1_jump_2
+apple: 1_jump_2_apple
 
 
-1_on_the_globe:
-	${CC} ${COMPILE_FLAGS} -m32 -o ./on_the_globe on_the_globe.c
+1_jump_2:
+	${CC} ${COMPILE_FLAGS} -m32 -o ./jump_2 jump_2.c
 
 
-1_on_the_globe_apple:
-	${CC} ${COMPILE_FLAGS} -o ./on_the_globe on_the_globe.c
+1_jump_2_apple:
+	${CC} ${COMPILE_FLAGS} -o ./jump_2 jump_2.c
 
 clean:
-	rm -rf ./on_the_globe ./on_the_globe.dSYM
+	rm -rf ./jump_2 ./jump_2.dSYM
